同步于: 10月9日20时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -5,8 +5,8 @@
 #### 五毛举报越来越频繁，请网友们前往下载 [一键翻墙软件](https://github.com/gfw-breaker/ssr-accounts)，并将此项目推荐给亲友
 #### [ 习近平陷入独裁者的宿命 六大指标定输赢(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018499.md)
 #### [ 二十大 习近平与元老干政的较量](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841091.md)
-#### [ 美智库：习近平如何在二十大巩固权力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018451.md)
 #### [ 习连任未必板上钉钉 二十大主席团或成翻盘推手？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018673.md)
+#### [ 美智库：习近平如何在二十大巩固权力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018451.md)
 #### [ 二十大添变数 美国将在关键时刻推“最强禁令”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018460.md)
 #### [ 武汉病毒学专家吴建国猝死引猜测(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018505.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
@@ -40,14 +40,14 @@
 #### [ 中纪委全会现异常 人事只字未提 赵乐际去向难料](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103546594.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
 #### [ 中共极端清零看傻眼 戴“鸟嘴口罩”吃饭画面曝光(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018634.md)
-#### [ 因《隐入尘烟》 甘肃广电遭整肃 电话被管控](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660531.md)
 #### [ 王友群：曾庆红的折腾与归宿](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841525.md)
-#### [ 六指标看习二十大成败？学者：习权力定于一尊但遗留政治问题](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660441.md)
-#### [ 北京街头惊悚一幕 学者叹中国人让人欲哭无泪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660528.md)
+#### [ 因《隐入尘烟》 甘肃广电遭整肃 电话被管控](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660531.md)
 #### [ 20大前美祭严厉制裁 专家：美中重大分水岭](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13841523.md)
 #### [ 克里米亚大桥爆炸对普京及俄乌战意味着什么](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13841469.md)
+#### [ 六指标看习二十大成败？学者：习权力定于一尊但遗留政治问题](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660441.md)
+#### [ 北京街头惊悚一幕 学者叹中国人让人欲哭无泪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660528.md)
 #### [ 打脸全面脱贫？200元电视买家秀令网友集体破防](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660594.md)
+#### [ 二十大召开前夕 多省代表进京前集中培训(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018702.md)
 #### [ 马斯克透露中共不满他送星链服务到乌克兰](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841104.md)
 #### [ 紧盯二十大 国际投资者推测清零何时结束](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13840862.md)
 #### [ 【远见快评】马斯克双火了 台海建议再掀巨波](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841116.md)
-#### [ 习近平不只三连任？分析：习执政对美国非坏事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018380.md)
