--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -46,8 +46,8 @@
 #### [ 中纪委全会现多处异常 赵乐际将被换掉？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841245.md)
 #### [ 大陆经济还能撑多久？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p4/1018656.md)
 #### [ 【热门话题】二十大预备会登场 习料连任 专家称“大戏”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103547324.md)
-#### [ 20大前疫情速升温 北京已有10条独立传播链](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841535.md)
+#### [ 中共19届7中全会召开 英媒提2大看点 习说话算不算要看这24人？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660873.md)
 #### [ 【新闻看点】刻赤大桥大爆炸 20种模式没保住？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841437.md)
+#### [ 20大前疫情速升温 北京已有10条独立传播链](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841535.md)
 #### [ 王靖渝在荷兰遭中共骚扰威胁 无法正常生活](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841496.md)
-#### [ 【时事金扫描】普京生日宫廷乱？新兵开坦克投降](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841088.md)
-#### [ 北京街头惊悚一幕 学者叹中国人让人欲哭无泪](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660528.md)
+#### [ 二十大“没戏可看”？学者揭暗箱操作手法](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841802.md)
