--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -42,12 +42,12 @@
 #### [ 北理工教授与女博士“不雅视频”传出 学术界哗然](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103547776.md)
 #### [ 专家揭习近平心头大患 二十大前清洗“刀把子”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103547715.md)
 #### [ 掌管华为最核心业务之一总裁丁耘突然去世 原因曝光？(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018641.md)
+#### [ 上海疫情反弹 多所高校被封 五类人被红码](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841848.md)
 #### [ 中共极端清零看傻眼 戴“鸟嘴口罩”吃饭画面曝光(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018634.md)
 #### [ 封控规模空前！北京“十一”街头惊现大批军警警戒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660588.md)
-#### [ 上海疫情反弹 多所高校被封 五类人被红码](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841848.md)
 #### [ 分析：二十大政治局委员 习近平的“贴身护卫”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103547846.md)
 #### [ 中共二十大前夕 多省代表进京前集中培训](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841684.md)
 #### [ 专家：全球疫情爆发前 中共早就开始囤积防具(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018755.md)
 #### [ 七中全会现诡异 天安门十米一警察](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660921.md)
+#### [ 【热门话题】专家揭习心头大患/疫情起京沪再封控](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103547804.md)
 #### [ 宁波对6.3万河南人赋红码 律师：违法](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842291.md)
-#### [ 【菁英论坛】七中全会明枪暗箭 各派蓄势待发](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841540.md)
