同步于: 10月11日19时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -36,9 +36,9 @@
 #### [ 中共元老蓄势待发？判断习权势 有一个指标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661017.md)
 #### [ 二十三年前江泽民的狂言已被彻底击碎](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661104.md)
 #### [ 网传乌克兰士兵捕获俄军使用的大疆无人机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841959.md)
+#### [ 为二十大铺路 分赃会启动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661191.md)
 #### [ 范冰冰釜山影展夺大奖 全英文感言泄复出进度](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841956.md)
 #### [ 乌克兰指多地遭袭击 基辅传出数次爆炸](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13842292.md)
-#### [ 为二十大铺路 分赃会启动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661191.md)
 #### [ 习近平陷入独裁者的宿命 六大指标定输赢(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018499.md)
 #### [ “战争性质发生变化” 多国回应普京轰炸行动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13842518.md)
 #### [ 唐嫣8个月没拍戏 透露“久不复工”原因](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842010.md)
@@ -50,4 +50,4 @@
 #### [ 掌管华为最核心业务之一总裁丁耘突然去世 原因曝光？(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018641.md)
 #### [ 七中全会现诡异 天安门十米一警察](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660921.md)
 #### [ 传大陆一老人做核酸捅坏喉咙还要捅 受不了跳楼自杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018765.md)
-#### [ 章天亮：习近平连任的最后变数](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660732.md)
+#### [ 大批军警包围中南海 二十大预备会议登场 各方信号不寻常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103548438.md)
