--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -32,8 +32,8 @@
 #### [ 习二十大前痛下狠手 孙力军案背后还有隐情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018534.md)
 #### [ 沁园春 封](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841961.md)
 #### [ 胡平：习近平连任成定局 但政敌众多 政权脆弱](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103547613.md)
-#### [ 章天亮: 七中全会最大看点 党章修正案 总书记人选提前透露](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661047.md)
 #### [ 为二十大铺路 分赃会启动](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661191.md)
+#### [ 章天亮: 七中全会最大看点 党章修正案 总书记人选提前透露](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661047.md)
 #### [ 中共元老蓄势待发？判断习权势 有一个指标](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661017.md)
 #### [ 二十三年前江泽民的狂言已被彻底击碎](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661104.md)
 #### [ 网传乌克兰士兵捕获俄军使用的大疆无人机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841959.md)
@@ -46,8 +46,8 @@
 #### [ 中共二十大：盘点中央出事高官 疑云笼罩](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13841253.md)
 #### [ 中共七中全会登场 京西宾馆一带戒备森严](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841758.md)
 #### [ 二十大是场大戏 专家分析：习连任意味什么](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13841544.md)
+#### [ 旧部重回中纪委 王岐山仍有政治影响力？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1018838.md)
 #### [ 大批军警包围中南海 二十大预备会议登场 各方信号不寻常](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103548438.md)
 #### [ 疫情拉中国经济陪葬 传北京全聚德关门 投资百万老板逃跑(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018775.md)
 #### [ 掌管华为最核心业务之一总裁丁耘突然去世 原因曝光？(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018641.md)
 #### [ 七中全会现诡异 天安门十米一警察](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/660921.md)
-#### [ 传大陆一老人做核酸捅坏喉咙还要捅 受不了跳楼自杀(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018765.md)
