同步于: 10月12日11时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -42,6 +42,7 @@
 #### [ 疫情拉中国经济陪葬 传北京全聚德关门 投资百万老板逃跑(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1018775.md)
 #### [ 美芯片禁令致北京跳脚 分析：正中中共软肋](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842974.md)
 #### [ 中共中纪委发极短公报 分析：字越少内斗越烈](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13842176.md)
+#### [ “废太子”胡春华与习近平为二十一大埋下的伏笔](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661425.md)
 #### [ 中纪委全会四人缺席 据传两人是军方高层](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103548537.md)
 #### [ 影射赵乐际？二十大前涉秦岭别墅案官员再被点名](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103548580.md)
 #### [ 中科院院士视频会上被女博士亲吻 舆论哗然](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842363.md)
@@ -49,5 +50,4 @@
 #### [ 中国股市传噩兆 全球聚焦二十大经济信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/661086.md)
 #### [ 60岁周星驰近况曝光 网民叹“背影好孤独”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842632.md)
 #### [ 【中国观察】官方捧习防疫政绩 释何风向 ？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843166.md)
-#### [ 中共设置海外110警察站 欧洲两国启动调查](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842597.md)
-#### [ 中共施压美大学遭拒 出动小粉红干扰张昆阳演讲](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13842202.md)
+#### [ 【一线采访】汕尾发生恶性砍人案 或报复社会](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13843023.md)
